# ChangeLog for media-video/ffmpeg
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.196 2007/05/16 05:29:05 jer Exp $

  16 May 2007; Jeroen Roovers <jer@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  Stable for HPPA (bug #174909).

  05 May 2007; Fabian Groffen <grobian@gentoo.org>
  ffmpeg-0.4.9_p20051216.ebuild, ffmpeg-0.4.9_p20060302.ebuild,
  ffmpeg-0.4.9_p20060530.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  Stable on Alpha, bug 174909.

  17 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  ppc stable, bug #168907

  16 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  ia64 stable

  12 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  x86 stable

  12 Apr 2007; Peter Weller <welp@gentoo.org> ffmpeg-0.4.9_p20070330.ebuild:
  Stable on amd64 wrt bug 168907

  05 Apr 2007; Alexis Ballier <aballier@gentoo.org>
  +files/ffmpeg-0.4.9_p20070330-asmpic.patch, ffmpeg-0.4.9_p20070330.ebuild:
  Disable non pic safe asm on x86 and amd64, bug #172845, bug #172877 and dupes

  04 Apr 2007; Markus Rothe <corsair@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  Stable on ppc64

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ffmpeg-0.4.9_p20070330.ebuild:
  Stable on sparc wrt #170860

*ffmpeg-0.4.9_p20070330 (30 Mar 2007)

  30 Mar 2007; Luca Barbato <lu_zero@gentoo.org>
  +ffmpeg-0.4.9_p20070330.ebuild:
  New snapshot

  27 Mar 2007; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20070325.ebuild:
  s/a52/liba52

  25 Mar 2007; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20070325.ebuild:
  Minor fixes and update

*ffmpeg-0.4.9_p20070325 (25 Mar 2007)

  25 Mar 2007; Luca Barbato <lu_zero@gentoo.org>
  +ffmpeg-0.4.9_p20070325.ebuild:
  New snapshot
