@@ -5,6 +5,8 @@ AUX ffmpeg-shared-gcc4.1.patch 1667 RMD160 cf0318bcb812ad701e8cd55f10f59ca71933c
 DIST 26104-510.zip 291836 RMD160 0ff97a27fe5d08dd43571fd1982ce0f07bce3bca SHA1 b22dbe895991c23fad446c3c4ff7b6db12673778 SHA256 75fdf6416950c155ccbfd7fae4ffd6529f162ad6b427ab242c3e00685e303f46
 DIST 26204-510.zip 246663 RMD160 1b68232bc40d84298b134c57697e29a842e63ffd SHA1 9ca910295c2888fba95a98da83762a22aaf34651 SHA256 069ebd6ed8ef846d99bdd13d6c47fdb99fe5583b0ed5f405e1392a1a21a1b991
 DIST ffmpeg-0.4.9-p20070330.tar.bz2 2192476 RMD160 e52bf6abbf7c630aa3e76243987fb7dd6d9b84a1 SHA1 bcc18c88c64f6f941eb1ac94357e0d6dcbf99045 SHA256 58a7e7d909e02fda07856ea044ae0f5f9c174791f63a449f2f23f37a78b34f95
+DIST ffmpeg-0.4.9-p20070525.tar.bz2 2264657 RMD160 dca62fedb6b5b61fe57c73a1cbac278b760fe98d SHA1 12bc5cb37bed8b9e66ea4d9711eed9a3d35edd9f SHA256 1b391c14e5c0015af6e6449dc9fd27a4f63aa0d342716427ba014c98950e2224
 EBUILD ffmpeg-0.4.9_p20070330.ebuild 6161 RMD160 1d8a355d49ed604b39de29a001d9b9806c873cc9 SHA1 7f01c48b27db92be5845fca0c2a6fbe03ce0b77a SHA256 3b6b237d86058fd81b5c1faaf2a09fd00e9345839c4c383c2906051361576eb2
-MISC ChangeLog 29195 RMD160 ef2589b51b7c511fe20ead7cec5379a73d8a1b96 SHA1 00c70aa95582b69c3452a142ea9460473efea681 SHA256 c55e379b9dd111db8c3a0736897d38d18bf0f8fad3b0341ac55ddecdbd4509b9
+EBUILD ffmpeg-0.4.9_p20070525.ebuild 5445 RMD160 9d8b7f001d1476c37228e624cca2bf6afb112f5f SHA1 c4fb80be3c3a1989c70be3b3028d2715e2f034b5 SHA256 128c0ba150bc1137ae6d3c2d159157a38bd26ddded7de6e47026dba4b78e22c0
+MISC ChangeLog 29351 RMD160 0add36b88f9131f0e3a6f8132a343b03b23338ba SHA1 5eb56cf4d81011823a8f590caeeecc305e932156 SHA256 b088cc6549751116b221686a6d48431bf70f6afd8c9037eec852185112211e8b
 MISC metadata.xml 223 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 SHA1 ea8c387229caaf4b0d3c9fbef9143b70dcae0b0d SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812
