@@ -1,6 +1,12 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.196 2007/05/16 05:29:05 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.197 2007/05/26 06:53:13 lu_zero Exp $
+
+*ffmpeg-0.4.9_p20070525 (26 May 2007)
+
+  26 May 2007; Luca Barbato <lu_zero@gentoo.org>
+  +ffmpeg-0.4.9_p20070525.ebuild:
+  New snapshot, using libamr
 
   16 May 2007; Jeroen Roovers <jer@gentoo.org>
   ffmpeg-0.4.9_p20070330.ebuild:
